--- a/services/api/package.json
+++ b/services/api/package.json
@@ -8,6 +8,9 @@
     "start": "node src/server.js",
     "test": "node --test"
   },
+  "dependencies": {
+    "@google-cloud/firestore": "^7.11.0"
+  },
   "engines": {
     "node": ">=20"
   }
