--- a/services/api/Dockerfile
+++ b/services/api/Dockerfile
@@ -2,7 +2,8 @@ FROM node:20-alpine
 
 WORKDIR /app
 COPY package*.json ./
-RUN if [ -f package-lock.json ]; then npm ci --omit=dev; else npm install --omit=dev; fi
+RUN npm ci --omit=dev
+RUN node -e "import('@google-cloud/firestore').then(()=>console.log('firestore-import-ok'))"
 COPY src ./src
 
 EXPOSE 8080
